# coursework_4

./: pyproject.toml
src/: hh_sj_classes.py  json_class.py  vacancy_class.py
ut/: main.py  utils.py
